--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,2 +1,13 @@
-<h1>Posts#index</h1>
-<p>Find me in app/views/posts/index.html.erb</p>
+<h1>Posts</h1>
+<table border="1px">
+  <tr>
+    <th>Title</th>
+    <th>Content</th>
+  </tr>
+  <% @posts.each do |post| %>
+  <tr>
+    <td><%= post.title  %></td>
+    <td><%= post.content  %></td>
+  </tr>
+  <% end %>
+</table>
