--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -6,7 +6,7 @@
   </tr>
   <% @posts.each do |post| %>
   <tr>
-    <td><%= post.title  %></td>
+    <td><%= link_to post.title, post  %></td>
     <td><%= post.content  %></td>
   </tr>
   <% end %>
