--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,11 +4,13 @@
   <tr>
     <th>Title</th>
     <th>Content</th>
+    <th></th>
   </tr>
   <% @posts.each do |post| %>
   <tr>
     <td><%= link_to post.title, post  %></td>
     <td><%= post.content  %></td>
+    <td><%= link_to "Edit post", edit_post_path(post)  %></td>
   </tr>
   <% end %>
 </table>
