Create delete function for posts

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,12 +5,14 @@
     <th>Title</th>
     <th>Content</th>
     <th></th>
+    <th></th>
   </tr>
   <% @posts.each do |post| %>
   <tr>
     <td><%= link_to post.title, post  %></td>
     <td><%= post.content  %></td>
     <td><%= link_to "Edit post", edit_post_path(post)  %></td>
+    <td><%= link_to "Delete post", post, method: :delete, data: {confirm: "Are you sure?"}  %></td>
   </tr>
   <% end %>
 </table>
