--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,3 +1,3 @@
 <h1><%= @post.title  %></h1>
 <p><%= @post.content %></p>
-<% link_to "Edit post", edit_post  %>
+<%= link_to "Edit post", edit_post_path  %>
