Function Auth User

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,9 @@
   </head>
 
   <body>
+    <% if signed_in? %>
+      <div>Hello <%= current_user.name %></div>
+    <% end %>
     <%= yield %>
   </body>
 </html>
