Add relation user to post

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,4 +3,5 @@
 	<%= f.text_field :name, placeholder: "Enter your Name" %>
   <%= f.email_field :email, placeholder: "Enter your Email" %>
   <%= f.password_field :password, placeholder: "Create your Password" %>
+  <%= f.submit "Register" %>
 <% end %>
