Dont permit delete and edit post if user is not owner

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,3 +1,6 @@
 <h1><%= @post.title  %></h1>
 <p><%= @post.content %></p>
-<%= link_to "Edit post", edit_post_path  %>
+<% if signed_in? && @product.user == current_user %>
+  <%= link_to "Edit post", edit_post_path  %>
+  <%= link_to "Delete post", @post, method: :delete, data:{confirm: "Are you sure to delete this post"} %>
+<% end %>  
