Add functionality for comment posts

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -8,6 +8,7 @@
     <th>Content</th>
     <th></th>
     <th></th>
+    <th></th>
   </tr>
   <% @posts.each do |post| %>
   <tr>
@@ -16,7 +17,8 @@
     <% if signed_in? %>
       <td><%= link_to "Edit post", edit_post_path(post)  %></td>
       <td><%= link_to "Delete post", post, method: :delete, data: {confirm: "Are you sure?"}  %></td>
-    <% end %>  
+    <% end %>
+    <td><%= post.comments.count %> Comments</td>  
   </tr>
   <% end %>
 </table>
