--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,6 +1,18 @@
 <h1><%= @post.title  %></h1>
 <p><%= @post.content %></p>
-<% if signed_in? && @product.user == current_user %>
+
+<% @post.comments.each do |comment| %>
+  <%= comment.body  %>
+<% end %>
+
+<% if signed_in? %>
+  <%= form_for [@post, @post.comments.build] do |f| %>
+    <%= f.text_area :body, placeholder: "Add comment"  %>
+    <%= f.submit "Comment"  %>  
+  <% end %>
+<% end %>
+
+<% if signed_in? && @post.user == current_user %>
   <%= link_to "Edit post", edit_post_path  %>
   <%= link_to "Delete post", @post, method: :delete, data:{confirm: "Are you sure to delete this post"} %>
 <% end %>  
