--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,24 +1,35 @@
-<h1>Posts</h1>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12">
+      <h1>Posts</h1>
+
+      <table class="table">
+        <tr>
+          <th>Title</th>
+          <th>Content</th>
+          <th></th>
+          <th></th>
+        </tr>
+        <% @posts.each do |post| %>
+        <tr>
+          <td><%= link_to post.title, post  %></td>
+          <td><%= post.content  %></td>
+          <% if signed_in? %>
+            <td><%= link_to "Edit post", edit_post_path(post)  %></td>
+            <td><%= link_to "Delete post", post, method: :delete, data: {confirm: "Are you sure?"}  %></td>
+          <% end %>
+          <td><%= post.comments.count %> Comments</td>  
+        </tr>
+        <% end %>
+      </table>
+    </div>
+  </div>
+</div>
+
 <% if signed_in? %>
   <%= link_to "Create post", new_post_path %>
 <% end %>
 <table border="1px">
-  <tr>
-    <th>Title</th>
-    <th>Content</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-  <% @posts.each do |post| %>
-  <tr>
-    <td><%= link_to post.title, post  %></td>
-    <td><%= post.content  %></td>
-    <% if signed_in? %>
-      <td><%= link_to "Edit post", edit_post_path(post)  %></td>
-      <td><%= link_to "Delete post", post, method: :delete, data: {confirm: "Are you sure?"}  %></td>
-    <% end %>
-    <td><%= post.comments.count %> Comments</td>  
-  </tr>
-  <% end %>
+ 
+  
 </table>
