--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,6 +1,23 @@
-<h1><%= form_title  %></h1>
-<%= form_for @post do |f|  %>
-  <%= f.text_field :title, placeholder: "Enter title of post"  %>
-  <%= f.text_area :content, placeholder: "Enter content of post"  %>
-  <%= f.submit "Publish post"  %>
-<% end %>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-6 col-sm-offset-3">
+    <h1><%= form_title  %></h1>
+
+    <%= form_for @post do |f|  %>
+     <div class="form-group">
+      <%= f.text_field :title, class: "form-control input-lg", placeholder: "Enter title of post"  %> 
+     </div>
+     <div class="form-group">
+      <%= f.text_area :content, class: "form-control input-lg", placeholder: "Enter content of post"  %> 
+     </div> 
+     <div class="form-group">
+      <%= f.submit "Publish post", class: "btn btn-success btn-lg btn-block"  %> 
+     </div>  
+    <% end %>
+    </div>
+  </div>
+</div>
+
+
+
+
