--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -22,14 +22,12 @@
         </tr>
         <% end %>
       </table>
+      <% if signed_in? %>
+        <div class="text-left">
+          <%= link_to "Create post", new_post_path, class: "btn btn-success" %>
+        </div>
+      <% end %>
     </div>
   </div>
 </div>
 
-<% if signed_in? %>
-  <%= link_to "Create post", new_post_path %>
-<% end %>
-<table border="1px">
- 
-  
-</table>
