--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,12 @@
-<h1><%= @post.title  %></h1>
-<p><%= @post.content %></p>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12">
+     <h1><%= @post.title  %></h1>
+     <p><%= @post.content %></p>       
+    </div>
+  </div>
+</div>
+
 
 <% @post.comments.each do |comment| %>
   <%= comment.body  %>
