--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,25 @@
-<h1>Register User</h1>
-<%= form_for @user do |f|  %>
-	<%= f.text_field :name, placeholder: "Enter your Name" %>
-  <%= f.email_field :email, placeholder: "Enter your Email" %>
-  <%= f.password_field :password, placeholder: "Create your Password" %>
-  <%= f.submit "Register" %>
-<% end %>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-6  col-sm-offset-3">
+    <h1>Register User</h1>
+
+    <%= form_for @user do |f|  %>
+      <div class="form-group">
+        <%= f.text_field :name,class: "form-control input-lg", placeholder: "Enter your Name" %>
+      </div>
+      <div class="form-group">
+        <%= f.email_field :email, class: "form-control input-lg", placeholder: "Enter your Email" %>
+      </div>
+      <div class="form-group">
+        <%= f.password_field :password, class: "form-control input-lg", placeholder: "Create your Password"%>
+      </div>
+      <div class="form-group">
+        <%= f.submit "Register", class: "btn btn-success btn-block btn-lg" %>   
+      </div>
+    <% end %>        
+    </div>
+  </div>
+</div>
+
+
+
