--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,3 +1,29 @@
-// Place all the styles related to the Posts controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.posts{
+  margin-top: 40px;
+  .post{
+    padding: 15px 10px;
+    border-radius: 6px;
+  &:hover{background:#f5f5f2;}
+
+    .post-details{
+      float:left;
+
+      .post-title a{
+        color:#303030;
+        font-size:21px;
+        line-height: 1;
+
+        &:hover, &:focus{
+          color:#28a745;text-decoration:none;};
+      }
+
+      .post-content{
+        display:block;
+        color:#999;
+        font-size:16px;
+      }
+    }
+  } 
+}
+
+
