--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -2,7 +2,15 @@
   <div class="row">
     <div class="col-sm-6 col-sm-offset-3">
     <h1><%= form_title  %></h1>
-
+    <% if @post.errors.any? %>
+      <div class="alert alert-danger">
+        <ul>
+          <%= @post.errors.full_messages.each do |message|  %>
+            <li><%= message  %></li>
+          <% end %>
+        </ul>
+      </div>
+    <% end %>
     <%= form_for @post do |f|  %>
      <div class="form-group">
       <%= f.text_field :title, class: "form-control input-lg", placeholder: "Enter title of post"  %> 
