Add details for Show

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -9,6 +9,10 @@
               <span class="post-title"><%= link_to post.title, post  %></span>
               <span class="post-content"><%= post.content  %></span>
             </div>
+            <div class="post-comments">
+              <span class="glyphicon glyphicon-comment"></span>
+              <span class="comment-count"><%= post.comments.count  %></span>
+            </div>
           </div>
         <% end %>
       </div>
