--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -59,11 +59,38 @@
 
     h2 {
       color:#218838;
-      font-size:16px;
+      font-size:22px;
       margin-bottom: 20px;
+      text-align:center;
     }
   }
 
+}
+
+.actions {
+  margin-top: 30px;
+
+  a{ 
+    color:#ccc;
+    font-size:21px;
+    margin-right: 5px;
+
+    &:hover {color:white;}
+  }
+}
+
+
+.post-comments{
+  float:right;
+  color:#ccc;
+  padding:10px;
+
+  .glyphicon{font-size:21px;}
+  .comment-count{
+    margin-left:15px;
+    font-size:18px;
+    vertical-align:text-bottom;
+  }
 }
 
 
