--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,29 +1,44 @@
 <div class="post-view">
   <header class="post-header">
     <h1><%= @post.title  %></h1>
-    <p><%= @post.content %></p>
+    <% if signed_in? && @post.user == current_user %>
+      <div class="actions">
+        <%= link_to "<span class='glyphicon glyphicon-pencil'></span>".html_safe, edit_post_path(@post) %>
+        <%= link_to "<span class='glyphicon glyphicon-trash'></span>".html_safe, @post, method: :delete, data:{confirm: "Are you sure to delete this post"} %>
+      </div>
+    <% end %>  
   </header>
-
-  <div class="comments">
-    <h2>Comments</h2>
-    <% @post.comments.each do |comment| %>
-      <%= comment.body  %>
-    <% end %>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-10 col-sm-offset-1">
+        <p class="info">Created: <%= @post.created_at  %> Author: <%= @post.user.name  %></p>
+        <p><%= @post.content %></p>
+      </div>
+    </div>
   </div>
-
-
-
+  <div class="row">
+    <div class="col-sm-6 col-sm-offset-3">
+      <div class="comments">
+        <h2>Comments</h2>
+         <% @post.comments.each do |comment| %>
+          <div class="panel panel-default">
+            <header class="panel-heading"><%= comment.user.name  %></header>
+            <div class="panel-body"><%= comment.body %></div>
+          </div>
+         <% end %>
+          <% if signed_in? %>
+            <%= form_for [@post, @post.comments.build] do |f| %>
+              <div class="form-group">
+                <%= f.text_area :body,class: "form-control", placeholder: "Add comment"  %> 
+              </div>
+              <div class="actions text-left">
+                <%= f.submit "Comment", class: "btn btn-success btn-lg btn-block" %>  
+              </div>
+            <% end %>
+          <% end %> 
+      </div>
+    </div>
+  </div>
 </div>
 
 
-<% if signed_in? %>
-  <%= form_for [@post, @post.comments.build] do |f| %>
-    <%= f.text_area :body, placeholder: "Add comment"  %>
-    <%= f.submit "Comment"  %>  
-  <% end %>
-<% end %>
-
-<% if signed_in? && @post.user == current_user %>
-  <%= link_to "Edit post", edit_post_path  %>
-  <%= link_to "Delete post", @post, method: :delete, data:{confirm: "Are you sure to delete this post"} %>
-<% end %>  
