--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -22,6 +22,12 @@
         color:#999;
         font-size:16px;
       }
+
+      .post-date{
+        display:block;
+        color:#218838;
+        font-size:13px;
+      }
     }
   } 
 }
@@ -56,6 +62,7 @@
 
   .comments{
     padding: 0 25px;
+    margin-bottom:40px;
 
     h2 {
       color:#218838;
