--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,17 +29,12 @@
               </ul>
               <ul class="nav navbar-nav navbar-right">
               <% if signed_in? %>
-                <li class="dropdown">
-                  <ul class="dropdown-menu" role="menu">
-                    <li><%= link_to "Logout", logout_path, method: :delete %></li>
-                  </ul>
-                </li>
                 <li><%= link_to "<span class='glyphicon glyphicon-plus'></span>".html_safe, new_post_path %></li>
+                <li><%= link_to "Logout", logout_path, method: :delete %></li>
               <% else %>
                 <li><%= link_to "Register", new_user_path %></li>
                 <li><%= link_to "Login", login_path %></li>    
               <% end %>  
-              </ul>
               <form class="navbar-form navbar-right" role="search">
                 <div class="form-group">
                   <input type="text" class="form-control" placeholder="Search">
@@ -51,15 +46,19 @@
         </div>
       </div>
     </nav>
-   
+    <div class="container">
+      <div class="row mt-3">
+        <div class="col-sm-8 col-sm-offset-2">
+        <% if flash[:notice] %>
+          <div class="alert alert-success"><%= flash[:notice] %></div>
+        <% end %>  
+        </div>
+      </div>
+    </div>
     <%= yield %>
   </body>
 </html>
 
 
 
-
- <% if flash[:notice] %>
-      <div class="alert alert-success"><%= flash[:notice] %></div>
-    <% end %>
     
