--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -5,7 +5,7 @@
     <% if @post.errors.any? %>
       <div class="alert alert-danger">
         <ul>
-          <%= @post.errors.full_messages.each do |message|  %>
+          <% @post.errors.full_messages.each do |message|  %>
             <li><%= message  %></li>
           <% end %>
         </ul>
