--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -7,7 +7,8 @@
           <div class="post clearfix">
             <div class="post-details">
               <span class="post-title"><%= link_to post.title, post  %></span>
-              <span class="post-content"><%= post.content  %></span>
+              <span class="post-content"><%= post.content.first(250)  %></span>
+              <span class="post-date"><%= post.created_at.strftime("%B %d, %Y") %></span>
             </div>
             <div class="post-comments">
               <span class="glyphicon glyphicon-comment"></span>
