--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -11,12 +11,12 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-10 col-sm-offset-1">
-        <p class="info">Created: <%= @post.created_at  %> Author: <%= @post.user.name  %></p>
+        <p class="info"><strong>Created:</strong> <%= @post.created_at.strftime("%B %d, %Y") %> <strong>Author:</strong> <%= @post.user.name  %></p>
         <p><%= @post.content %></p>
       </div>
     </div>
   </div>
-  <div class="row">
+  <div class="row mb-3">
     <div class="col-sm-6 col-sm-offset-3">
       <div class="comments">
         <h2>Comments</h2>
