--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <%= link_to "MakeItBlog", root_path, class: "navbar-brand" %>    
+              <%= link_to "Students Blog", root_path, class: "navbar-brand" %>    
             </div>
 
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
